[package]
name = "gcloud-identity-token"
version = "0.1.0"
edition = "2021"
description = "A secure OAuth token client for Google Cloud"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/gcloud-identity-token"
repository = "https://github.com/casonadams/gcloud-identity-token"
homepage = "https://github.com/casonadams/gcloud-identity-token"
keywords = ["google", "oauth", "gcloud", "token"]
categories = ["authentication", "api-bindings"]

[lib]
doc = true

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
jsonwebtoken = "9"
keyring = "2"
open = "5"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
tiny_http = "0.12"
tokio = { version = "1", features = ["full"] }
url = "2"

[dev-dependencies]
tempfile = "3"
